# cognitive-services-speech-sdk

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  REDIST.txt  ThirdPartyNotices.md  azure-pipelines.yml  carbon.sln  cgmanifest.json  init.cmd  init_unidec.cmd  license.md  package-lock.json  run_all_build.sh  setup.cfg  setup.py  version.txt
bindings/: CMakeLists.txt  carbon.i  wrappers.h
bindings/csharp/: CMakeLists.txt  audio_input_stream.cs  carbon_csharp.i  factory_parameter_collection.cs  factory_parameter_kind.cs  intent_model.cs  intent_recognition_result.cs  intent_recognition_result_event_args.cs  intent_recognizer.cs  luis_model.cs  parameter_collection.cs  parameter_names.cs  recognition_error_event_args.cs  recognition_event_args.cs  recognition_status.cs  recognizer.cs  recognizer_factory.cs  recognizer_parameter_kind.cs  recogntion_event_args.cs  result_property_collection.cs  session_event_args.cs  session_event_type.cs  speech_factory.cs  speech_output_format.cs  speech_recognition_error_event_args.cs  speech_recognition_reason.cs  speech_recognition_result.cs  speech_recognition_result_event_args.cs  speech_recognition_staus.cs  speech_recognizer.cs  translation_recognizer.cs  translation_status.cs  translation_synthesis_result.cs  translation_synthesis_result_event_args.cs  translation_synthesis_status.cs  translation_text_result.cs  translation_text_result_event_args.cs  translation_text_status.cs  value.cs
bindings/java/: CMakeLists.txt  carbon_java.i
bindings/java/Carbon/: ParameterCollection.java  SessionEventArgs.java  SessionEventType.java
bindings/python/: CMakeLists.txt  carbon_py.i  conftest.py  test.py.in
samples/MRCP/: .gitignore  Makefile.am  README.md  configure.ac  test_with_freeswitch.md
samples/MRCP/docker/: build.sh
samples/MRCP/ms-common/: Makefile.am  ms-common.vcxproj  ms-common.vcxproj.filters
samples/MRCP/ms-recog/: Makefile.am  msrecog.vcproj  msrecog.vcxproj  msrecog.vcxproj.filters
samples/MRCP/ms-synth/: Makefile.am  mssynth.vcxproj  packages.config
samples/MRCP/sample-conf/: config.json  logfile.xml  logger.xml  unimrcpclient.xml  unimrcpserver.xml
samples/MRCP/test_scripts/: recog_test_analysis.py  synth_test_analysis.py
samples/realtime-api-plus/: .gitignore  Dockerfile  README.md  docker-compose.yaml  download-pkg.sh  pyproject.toml
samples/realtime-api-plus/.config/: tsaoptions.json
samples/realtime-api-plus/realtime-api-plus/: __init__.py  app.py  azure_avatar.py  azure_tts.py  data_models.py  gpt4o_azure_avatar_client.py  gpt4o_azure_voice_client.py  gpt4o_client.py  realtime_audio_session_handler.py  websocket_server.py
samples/realtime-api-plus/web/: index.html  package-lock.json  package.json
scenarios/full-duplex-bot/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
scenarios/full-duplex-bot/fullduplex/: azure_fast_transcription_recognizer.py  azuretts.py  bot_response.py  cache.py  chat_server_azure.py  oai.py  voices.csv  webapp.py  ws_server.py
source/bindings/: CMakeLists.txt  carbon.i  wrappers.h
source/bindings/csharp/: CMakeLists.txt  Microsoft.CognitiveServices.Speech.csharp.csproj.template  assembly_info.cs  audio_config.cs  audio_data_stream.cs  audio_input_stream.cs  audio_output_stream.cs  audio_stream_container_format.cs  audio_stream_format.cs  auto_detect_source_lang_config.cs  auto_detect_source_lang_result.cs  bot_connector_config.cs  bot_connector_eventargs.cs  carbon_csharp.i  cognitive_services_speech_keypair.snk  connection.cs  connection_event_args.cs  connection_event_type.cs  connection_message.cs  connection_message_event_args.cs  conversation.cs  conversation_expiration_eventargs.cs  conversation_participants_changed_eventargs.cs  conversation_transcriber.cs  conversation_transcription_result.cs  conversation_transcription_result_event_args.cs  conversation_translation_eventargs.cs  conversation_translation_result.cs  conversation_translator.cs  detailed_speech_recognition_result.cs  dialog_config.cs  dialog_connector.cs  dialog_connector_eventargs.cs  dialog_service_config.cs  dialog_service_connector.cs  dialog_service_connector_eventargs.cs  factory_parameter_collection.cs  factory_parameter_kind.cs  intent_model.cs  intent_recognition_result.cs  (+74 more)
source/bindings/java/: CMakeLists.txt  carbon_java.i
source/bindings/js/: .gitattributes  .gitignore  (+16 more)
source/core/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  carbontests.runsettings  cxxapitests.runsettings  test.audio.utterances.json  test.defaults.json  test.settings.json  test.subscriptions.regions.json
tests/appcenter/: README.md
tests/include/: test_utils.h
tests/scripts/: download_audio.sh  e2e_carbon_csharp.sh  e2e_carbonx.sh  e2e_uspconsole.sh  package.json  run_test_server.sh  test-server.js  unit_tests.sh
tests/unit-tests/: AudioBuffer_Tests.cpp  CMakeLists.txt  audio_processor_write_to_audio_source_buffer_test.cpp  audio_source_adapter_test.cpp  main.cpp  mocks.h  read_write_ring_buffer_test_case.cpp  sequence_generator_audio_stream_reader.cpp  sequence_generator_audio_stream_reader.h  session2_test.cpp  single_to_many_stream_reader_adapter_test.cpp  spxtest_unit_tests.cpp  string_utils_test.cpp  unit_test_utils.h
tools/carbon_csharp_console/: CMakeLists.txt  carbon_csharp_console.cs  csharp_intent_reco_sample.cs  csharp_speech_reco_sample.cs  csharp_translation_sample.cs
tools/carbonx/: CMakeLists.txt  CMakeSettings.json  carbon_test_console.cpp  carbon_test_console.h  carbon_test_console.sln  carbonx.vcxproj  carbonx.vcxproj.filters  carbonx_pal.h  carbonx_pal_windows.cpp  channel9.cpp  hello_world.cpp  hello_world_c.cpp  stdafx.h
tools/ctc/: CMakeLists.txt  carbon_test_console.cpp  carbon_test_console.h  ctc.cpp  ctc.vcxproj  ctc.vcxproj.filters  ctc_pal.h  ctc_pal_win.cpp  stdafx.h
tools/uspclientconsole/: CMakeLists.txt  uspclientconsole.VC.db  uspclientconsole.c  uspclientconsole.cpp  uspclientconsole.sln  uspclientconsole.vcxproj  uspclientconsole.vcxproj.filters
(+5810 files in other folders)
